[gd_scene load_steps=4 format=3 uid="uid://1qxt0o7ufabr"]

[ext_resource type="Script" path="res://Script/UNITS/Targeting_units.gd" id="1_pp3ee"]
[ext_resource type="FontFile" uid="uid://b2yhjqt5msu3e" path="res://Assets/Font source/Roboto-Black.ttf" id="2_g3ykt"]

[sub_resource type="LabelSettings" id="LabelSettings_vsvp5"]
font = ExtResource("2_g3ykt")
font_size = 64

[node name="Covering" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = -1920.0
offset_bottom = -1080.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
script = ExtResource("1_pp3ee")

[node name="CoverTop" type="ColorRect" parent="."]
layout_mode = 0
offset_right = 1920.0
offset_bottom = 190.0
color = Color(0, 0, 0, 0.521569)

[node name="targeting_what" type="Label" parent="CoverTop"]
unique_name_in_owner = true
layout_mode = 0
offset_left = 3.0
offset_right = 1920.0
offset_bottom = 190.0
text = "Targeting a PLACEHOLDER, right-click to cancel"
label_settings = SubResource("LabelSettings_vsvp5")
horizontal_alignment = 1
vertical_alignment = 1

[node name="CoverBot" type="ColorRect" parent="."]
layout_mode = 0
offset_top = 940.0
offset_right = 1920.0
offset_bottom = 1080.0
color = Color(0, 0, 0, 0)

[node name="CoverBeta" type="ColorRect" parent="."]
unique_name_in_owner = true
layout_mode = 0
offset_left = 3.0
offset_top = 190.0
offset_right = 1923.0
offset_bottom = 505.0
mouse_filter = 2
color = Color(1, 0, 0, 0)

[node name="CoverAlpha" type="ColorRect" parent="."]
unique_name_in_owner = true
layout_mode = 0
offset_top = 505.0
offset_right = 1920.0
offset_bottom = 940.0
mouse_filter = 2
color = Color(0, 1, 0, 0)
